--- a/machine_learning_introducao_a_classificacao_com_sklearn.ipynb
+++ b/machine_learning_introducao_a_classificacao_com_sklearn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": " machine-learning-introducao-a-classificacao-com-sklearn",
       "provenance": [],
-      "authorship_tag": "ABX9TyOd+DFIyHwJxarRpT6uBkZm",
+      "authorship_tag": "ABX9TyNCsVF16sOpLM9zczB0NiGT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,13 +168,411 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rvouPdmtrrb2"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        },
+        "id": "rvouPdmtrrb2",
+        "outputId": "dcb5f810-4f1d-435f-be24-72df827e3c90"
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "\n",
+        "uri = \"https://gist.githubusercontent.com/guilhermesilveira/2d2efa37d66b6c84a722ea627a897ced/raw/10968b997d885cbded1c92938c7a9912ba41c615/tracking.csv\"\n",
+        "dados = pd.read_csv(uri)\n",
+        "dados.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>home</th>\n",
+              "      <th>how_it_works</th>\n",
+              "      <th>contact</th>\n",
+              "      <th>bought</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   home  how_it_works  contact  bought\n",
+              "0     1             1        0       0\n",
+              "1     1             1        0       0\n",
+              "2     1             1        0       0\n",
+              "3     1             1        0       0\n",
+              "4     1             1        0       0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "63Gz072ryUYd"
+      },
+      "source": [
+        "mapa = {\n",
+        "    \"home\" : \"principal\",\n",
+        "    \"how_it_works\" : \"como_funciona\",\n",
+        "    \"contact\" : \"contato\",\n",
+        "    \"bought\" : \"comprou\"\n",
+        "}\n",
+        "dados = dados.rename(columns = mapa)"
+      ],
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        },
+        "id": "lifW7iYezdk6",
+        "outputId": "5ea0c033-2ce6-4f7a-fd52-ab50cdfe917a"
+      },
+      "source": [
+        "x = dados[[\"principal\",\"como_funciona\",\"contato\"]]\n",
+        "x.head()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>principal</th>\n",
+              "      <th>como_funciona</th>\n",
+              "      <th>contato</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   principal  como_funciona  contato\n",
+              "0          1              1        0\n",
+              "1          1              1        0\n",
+              "2          1              1        0\n",
+              "3          1              1        0\n",
+              "4          1              1        0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eXzqxWLizhcg",
+        "outputId": "a4b6966b-eed8-4cd5-973b-128d6a5a85db"
+      },
+      "source": [
+        "y = dados[\"comprou\"]\n",
+        "y.head()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    0\n",
+              "1    0\n",
+              "2    0\n",
+              "3    0\n",
+              "4    0\n",
+              "Name: comprou, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MHSWCa9bz9Hd",
+        "outputId": "a1a2e268-1a3b-4c99-b0fd-dfa0a914b307"
+      },
+      "source": [
+        "treino_x = x[:75]\n",
+        "treino_y = y[:75]\n",
+        "teste_x = x[75:]\n",
+        "teste_y = y[75:]\n",
+        "\n",
+        "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Treinaremos com 75 elementos e testaremos com 24 elementos\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NpcxO70u0GEB"
+      },
+      "source": [
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.metrics import accuracy_score"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pXaHDIbh0YaA",
+        "outputId": "67bb346f-a5eb-44d9-9a31-c79571ef86e5"
+      },
+      "source": [
+        "modelo = LinearSVC()\n",
+        "modelo.fit(treino_x, treino_y)\n",
+        "previsoes = modelo.predict(teste_x)\n",
+        "\n",
+        "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+        "print(\"A acurácia foi %.2f%%\" % acuracia)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A acurácia foi 95.83%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1tD55a5G4I7K"
+      },
+      "source": [
+        "Separando Treino e teste\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rukpO4Th23TQ",
+        "outputId": "48832e74-1f15-4562-d863-5a7d947fc8de"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split \n",
+        "SEED = 20\n",
+        "\n",
+        "treino_x, teste_x, treino_y, teste_y = train_test_split(x,y,random_state = SEED,stratify =y, test_size =0.25)\n",
+        "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
+        "modelo = LinearSVC()\n",
+        "modelo.fit(treino_x, treino_y)\n",
+        "previsoes = modelo.predict(teste_x)\n",
+        "\n",
+        "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+        "print(\"A acurácia foi %.2f%%\" % acuracia)\n"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Treinaremos com 74 elementos e testaremos com 25 elementos\n",
+            "A acurácia foi 96.00%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qEY-RFoL3Fdf",
+        "outputId": "632f16fd-bc91-48ed-dc9e-0a4971508ec2"
+      },
+      "source": [
+        "teste_y.value_counts()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    17\n",
+              "1     8\n",
+              "Name: comprou, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OMflF0_X5Z58",
+        "outputId": "cfd4e081-ee14-42c5-e087-117e4eb9b804"
+      },
+      "source": [
+        "treino_y.value_counts()\n"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    49\n",
+              "1    25\n",
+              "Name: comprou, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     }
   ]
 }
